--- a/settings.json
+++ b/settings.json
@@ -1,17 +1,17 @@
 {
 	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "94767043432",
-	"ownerNumberr": "+94767043432",
-	"botnumber": "94767043432",
+	"ownerNumber": "+201157222064",
+	"ownerNumberr": "+201015078536",
+	"botnumber": "+201157222064",
 	"cr": "Queen Alexa",
-	"yt":"https://youtube.com/",
+	"yt":"https:https://youtube.com/channel/UCeMTAPzrnSXzQtQFVhpGUlg",
 	"grub":"https://chat.whatsapp.com/",
-	"wa": "wa.me/+94767043432",
+	"wa": "wa.me/+201015078536",
 	"donate": "94767043432",
 	"ig": "https://instagram.com/HYPER_MOD",
 	"gt": "https://github.com/HYPER-MOD",
-	"ownername": "© HYPER-MOD",
+	"ownername": "© Roudeus",
 	"botname":"「 Queen Alexa 」",
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
 	"thumb":"thumbnail.jpg",
