--- a/settings.json
+++ b/settings.json
@@ -1,13 +1,13 @@
 {
 	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "+201157222064",
-	"ownerNumberr": "+201015078536",
-	"botnumber": "+201157222064",
+	"ownerNumber": "201157222064",
+	"ownerNumberr": "201015078536",
+	"botnumber": "201157222064",
 	"cr": "Queen Alexa",
 	"yt":"https:https://youtube.com/channel/UCeMTAPzrnSXzQtQFVhpGUlg",
 	"grub":"https://chat.whatsapp.com/",
-	"wa": "wa.me/+201015078536",
+	"wa": "wa.me/201015078536",
 	"donate": "94767043432",
 	"ig": "https://instagram.com/HYPER_MOD",
 	"gt": "https://github.com/HYPER-MOD",
